# MyProtocol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TaskScheme.drawio
Client/: .clang-format  CMakeLists.txt  CMakePresets.json  vcpkg.json
Client/include/: desktop-scene.hpp  loading-scene.hpp  login-scene.hpp  mainwindow.hpp  network.hpp  scene-context.hpp  scene-type.hpp  scene.hpp
Client/src/: desktop-scene.cpp  loading-scene.cpp  login-scene.cpp  main.cpp  mainwindow.cpp  network.cpp  scene-context.cpp  scene.cpp
ProtocolLib/: CMakeLists.txt  DeserializationModule.drawio  Doxyfile  EncryptionModule.drawio  ProtocolLib.drawio  RequestModule.drawio  ResponseModule.drawio  SerializationModule.drawio  vcpkg.json
ProtocolLib/include/deserialization/: encryption-deserialization.hpp  get-data-request-deserialization.hpp  get-data-response-deserialization.hpp  new-data-request-deserialization.hpp  new-data-response-deserialization.hpp  request-deserialization.hpp  response-deserialization.hpp  utils.hpp
ProtocolLib/include/encryption/: encryption.hpp
ProtocolLib/include/protocol/: protocol.hpp
ProtocolLib/include/protocol/deserialization/: connect-response-deserialization.hpp  get-data-request-deserialization.hpp  get-data-response-deserialization.hpp  new-data-request-deserialization.hpp  new-data-response-deserialization.hpp  request-deserialization.hpp  response-deserialization.hpp  take-key-request-deserialization.hpp  utils.hpp
ProtocolLib/include/protocol/encryption/: aes.hpp  rsa.hpp
ProtocolLib/include/protocol/request/: get-data-request-factory.hpp  get-data-request.hpp  new-data-request-factory.hpp  new-data-request.hpp  request-factory.hpp  request.hpp  take-key-request-factory.hpp  take-key-request.hpp  type.hpp
ProtocolLib/include/protocol/response/: connect-response-factory.hpp  connect-response.hpp  get-data-response-factory.hpp  get-data-response.hpp  new-data-response-factory.hpp  new-data-response.hpp  response-factory.hpp  response.hpp  type.hpp
ProtocolLib/include/protocol/serialization/: connect-response-serialization.hpp  get-data-request-serialization.hpp  get-data-response-serialization.hpp  new-data-request-serialization.hpp  new-data-response-serialization.hpp  request-serialization.hpp  response-serialization.hpp  take-key-request-serialization.hpp  utils.hpp
ProtocolLib/include/request/: get-data-request-factory.hpp  get-data-request.hpp  new-data-request-factory.hpp  new-data-request.hpp  request-factory.hpp  request.hpp  type.hpp
ProtocolLib/include/response/: get-data-response-factory.hpp  get-data-response.hpp  new-data-response-factory.hpp  new-data-response.hpp  response-factory.hpp  response.hpp  type.hpp
ProtocolLib/include/serialization/: encryption-serialization.hpp  get-data-request-serialization.hpp  get-data-response-serialization.hpp  new-data-request-serialization.hpp  new-data-response-serialization.hpp  request-serialization.hpp  response-serialization.hpp  utils.hpp
ProtocolLib/src/: aes.cpp  connect-response-deserialization.cpp  connect-response-factory.cpp  connect-response-serialization.cpp  connect-response.cpp  deserialization-utils.cpp  encryption-deserialization.cpp  encryption-serialization.cpp  encryption.cpp  get-data-request-deserialization.cpp  get-data-request-factory.cpp  get-data-request-serialization.cpp  get-data-request.cpp  get-data-response-deserialization.cpp  get-data-response-factory.cpp  get-data-response-serialization.cpp  get-data-response.cpp  new-data-request-deserialization.cpp  new-data-request-factory.cpp  new-data-request-serialization.cpp  new-data-request.cpp  new-data-response-deserialization.cpp  new-data-response-factory.cpp  new-data-response-serialization.cpp  new-data-response.cpp  request-deserialization.cpp  request-factory.cpp  request-serialization.cpp  request.cpp  response-deserialization.cpp  response-factory.cpp  response-serialization.cpp  response.cpp  rsa.cpp  serialization-utils.cpp  take-key-request-deserialization.cpp  take-key-request-factory.cpp  take-key-request-serialization.cpp  take-key-request.cpp
ProtocolLib/test/: deserialization.cpp  encryption.cpp  serialization.cpp
Server/: CMakeLists.txt  Doxyfile  vcpkg.json
Server/include/: server.hpp  session-parameters.hpp  session.hpp
Server/include/model/: data-model.hpp
Server/include/repository/: repository.hpp
Server/include/service/: deserialization-request-service.hpp  request-service.hpp  serialization-response-service.hpp
Server/include/strategy/: get-data-request-strategy.hpp  new-data-request-strategy.hpp  request-strategy.hpp  take-key-request-strategy.hpp
Server/src/: deserializatino-request-service.cpp  get-data-request-strategy.cpp  main.cpp  new-data-request-strategy.cpp  repository.cpp  request-service.cpp  request-strategy.cpp  serialization-response-service.cpp  server.cpp  session.cpp  take-key-request-strategy.cpp
